updating drafts folder

--- a/_posts/2017-01-12-sage-days-84.md
+++ b/_posts/2017-01-12-sage-days-84.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Polytopes in Sage"
 date: 2017-01-12
-categories: upcoming_event
+categories: past_event
 tags: sage, polytopes
 ---
 
