--- a/_posts/2017-05-18-IRL-fviry.md
+++ b/_posts/2017-05-18-IRL-fviry.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Tutor at Introduction à la Recherche en Laboratoire"
+title:  "Tutor of Introduction à la Recherche en Laboratoire"
 date: 2017-05-16
 categories: past_event
 tags:
@@ -8,7 +8,7 @@ tags:
 
 [Introduction a la recherche en laboratoire](https://ensiwiki.ensimag.fr/index.php/Introduction_A_La_Recherche_En_Laboratoire_2A) is a course proposed at the [Ensimag engineering school](http://ensimag.grenoble-inp.fr/) (2nd year), and the aim is that students develop a (small) research project in a research team. 
 
-This semester, I was the co-tutor (together with [Goran Frehse](https://sites.google.com/site/frehseg/)), of [Frédéric Viry](https://github.com/viryfrederic/), who worked in the project:
+This semester, I was the co-tutor (together with [Goran Frehse](https://sites.google.com/site/frehseg/)), of the student [Frédéric Viry](https://github.com/viryfrederic/), who worked in the project:
 
 > *Reachability of high-dimensional dynamical systems through low-dimensional projections.*
 
