--- a/assets/cv/cv_es.tex
+++ b/assets/cv/cv_es.tex
@@ -239,7 +239,7 @@ Edad y situaci\'on  familiar: & 29, Casado
 \item[-] Doctorat en Math\'ematiques et Informatique à l'\'Ecole Doctorale MSTII
 	\begin{innerlist}
         \item[-] Laboratorio: \href{http://www.liglab.fr/}{Laboratoire d'Informatique de Grenoble}, \'equipe \href{http://capp.imag.fr/wordpress/}{CAPP}.
-        \item[-] Título de la tesis: Marches Quantiques et M\'ecanique Quantique Relativiste.
+        \item[-] Título de la tesis: \emph{Marches Quantiques et M\'ecanique Quantique Relativiste.}
 	\item[-] Directores de tesis: \href{http://membres-lig.imag.fr/arrighi/}{Pablo Arrighi} (directeur) et \href{http://www-fourier.ujf-grenoble.fr/~joye/}{Alain Joye} (co-encadrant).
 	\item[-] Palabras clave: mecánica cuántica discreta, simulación de sistemas cuánticos en interacción, análisis espectral, caminatas cuánticas, mecánica cuántica relativista.
 	\end{innerlist}
@@ -415,11 +415,11 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 %\begin{benumerate}{4}
 %\item Enhancing entropy production via dynamical percolation (joint with R. Donangelo, A. Romanelli). \emph{(unpublished)}
 
-\item[-] Quantum Walking in Curved Spacetime, Pablo Arrighi, Stefano Facchini, M. F. \emph{Quantum Information Processing} (2016) 15: 3467.
+\item[-] Quantum Walking in Curved Spacetime, Pablo Arrighi, Stefano Facchini, M. F. \emph{Quantum Information Processing} \href{https://link.springer.com/article/10.1007/s11128-016-1335-7}{(2016) 15: 3467}. \href{https://arxiv.org/abs/1505.07023}{arXiv: 1505.07023}. Palabras clave: paired QWs, lattice quantum field theory, quantum simulation. 
 
-\item[-] \href{http://iopscience.iop.org/1367-2630/16/9/093007/}{Discrete Lorentz covariance for Quantum Walks and Quantum Cellular Automata}. P. Arrighi, S. Facchini. \emph{New Journal of Physics}, 16 (2014) 093007. 
+\item[-] \href{http://iopscience.iop.org/1367-2630/16/9/093007/}{Discrete Lorentz covariance for Quantum Walks and Quantum Cellular Automata}. P. Arrighi, S. Facchini. \emph{New Journal of Physics}, 16 (2014) 093007. \href{https://arxiv.org/abs/1404.4499}{arXiv: 1404.4499}.
 
-\item[-] \href{http://arxiv.org/abs/1307.3524}{The Dirac equation as a quantum walk: higher dimensions, observational convergence}. P. Arrighi, V. Nesme and M.F. \emph{Journal of Physics A: Mathematical and Theoretical}, 47 (2014) 465302.
+\item[-] \href{http://arxiv.org/abs/1307.3524}{The Dirac equation as a quantum walk: higher dimensions, observational convergence}. P. Arrighi, V. Nesme and M.F. \emph{Journal of Physics A: Mathematical and Theoretical}, 47 (2014) 465302. \href{https://arxiv.org/abs/1307.3524}{arXiv: 1307.3524}.
 
 %\item \href{http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=8544748&fileId=S0960129511000600}{Spatial quantum search in a triangular network} (joint with G. Abal, R. Donangelo and R. Portugal). Publi\'{e} en \emph{Mathematical Structures in Computer Science}, 22 , pp 521-531, Cambridge University Press. Voir aussi arXiv pre-print: \href{http://arxiv.org/abs/1009.1422}{arXiv:1009.1422}
 %\end{benumerate}
@@ -430,11 +430,11 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 \begin{outerlist}
 %	\begin{benumerate}{3}
 	
-		\item[-] Modeling the Wind Turbine Benchmark with PWA Hybrid Automata. Applied Verification for Continuous and Hybrid Systems (ARCH 2017). Palabras clave: reachability analysis, compositional methods, nonlinear control systems, SpaceEx. 
+		\item[-] Modeling the Wind Turbine Benchmark with PWA Hybrid Automata. Applied Verification for Continuous and Hybrid Systems (ARCH 2017). \href{https://hal.archives-ouvertes.fr/hal-01508674}{HAL: 01508674}. Palabras clave: reachability analysis, compositional methods, nonlinear control systems, SpaceEx. 
 
-		\item[-] Constructing Verification Models of Nonlinear Simulink Systems via Syntactic Hybridization. Nikolaos Kekatos, M. F., Goran Frehse. 56th IEEE Conference on Decision and Control, to be held in Melbourne, Australia (2017). 
+		\item[-] Constructing Verification Models of Nonlinear Simulink Systems via Syntactic Hybridization. Nikolaos Kekatos, M. F., Goran Frehse.  \href{https://hal.archives-ouvertes.fr/hal-01487658}{HAL: 01487658}. 56th IEEE Conference on Decision and Control, to be held in Melbourne, Australia (2017).
 		
-		\item[-] Semidefinite Characterization of Invariant Measures for Polynomial Systems. Victor Magron, M. F., Didier Henrion. 18th French-German-Italian conference on Optimization, en Paderborn, Germany (2017). Palabras clave: Keywords: invariant measures, dynamical systems, polynomial optimization, semidefinite programming, moment-sum-of-square relaxations, Christoffel function. 
+		\item[-] Semidefinite Characterization of Invariant Measures for Polynomial Systems. Victor Magron, M. F., Didier Henrion. 18th French-German-Italian conference on Optimization, en Paderborn, Germany (2017). Palabras clave: invariant measures, dynamical systems, polynomial optimization, semidefinite programming, moment-sum-of-square relaxations, Christoffel function. 
 
 %	\end{benumerate}
 \end{outerlist}
@@ -448,9 +448,9 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 
 		\item Reach Set Approximation through Decomposition with Low-dimensional Sets and High-dimensional Matrices, Sergiy Bogomolov, M. F., Goran Frehse, Andreas Podelski, Christian Schilling, Frédéric Viry. 2017. Palabras clave: reachability analysis, safety verification, linear time-invariant systems, set recurrence relation.
 		
-		\item Occupation measure methods for modelling and analysis of biological hybrid automata. 2017. Thao Dang, Eric Fanchon, M. F., Victor Magron, Alexandre Rocca. arXiv pre-print: \href{https://arxiv.org/abs/1710.03158}{arXiv:1710.03158} Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures. 
+		\item Occupation measure methods for modelling and analysis of biological hybrid automata. 2017. Thao Dang, Eric Fanchon, M. F., Victor Magron, Alexandre Rocca. \href{https://arxiv.org/abs/1710.03158}{arXiv: 1710.03158}. Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures. 
 		
-		\item Explicit Error Bounds for Carleman Linearization. 2017. M. F., Amaury Pouly. arXiv pre-print: \href{https://arxiv.org/abs/1711.02552}{arXiv:1711.02552} Palabras clave: carleman linearization, polynomial ODEs, infinite-dimensional systems, guaranteed integration, nonlinear control theory.  
+		\item Explicit Error Bounds for Carleman Linearization. 2017. M. F., Amaury Pouly. \href{https://arxiv.org/abs/1711.02552}{arXiv: 1711.02552}. Palabras clave: carleman linearization, polynomial ODEs, infinite-dimensional systems, guaranteed integration, nonlinear control theory.  
 
 	\end{benumerate}
 \end{outerlist}
