update cv and preprint

--- a/assets/cv/cv_es.tex
+++ b/assets/cv/cv_es.tex
@@ -174,8 +174,9 @@
 \makeheading{Dr. Ing.~Marcelo FORETS IRURTIA}
 
 
+\section{Informaci\'{o}n \\ de contacto}
 
-\section{Informaci\'{o}n de contacto}
+\vspace{-0.4cm}
 
 %
 % NOTE: Mind where the & separators and \\ breaks are in the following
@@ -189,14 +190,18 @@
 
 
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
-Oficina: & Bureau 209, \href{http://www-verimag.imag.fr/}{VERIMAG} – \href{https://www.univ-grenoble-alpes.fr/}{Universit\'e Grenoble Alpes} \\
-Direcci\'on:& \href{https://batiment.imag.fr/en}{Bâtiment IMAG}, 700 Av. Centrale, 38041, France \\
-P\'agina web: & \href{http://marcelo-forets.fr}{\url{http://marcelo-forets.fr}}\\
-Tel\'efono m\'obil: & (+33)(0)6-47-91-43-65 \\
-E-mail personal: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} \\
-E-mail trabajo: & \href{mailto:marcelo.forets-irurtia@univ-grenoble-alpes.fr}{marcelo.forets-irurtia@univ-grenoble-alpes.fr} \\
-Nacionalidad: & Uruguaya \\
-Edad y situaci\'on  familiar: & 29, Casado
+%Oficina: & Bureau 209, \href{http://www-verimag.imag.fr/}{VERIMAG} – \href{https://www.univ-grenoble-alpes.fr/}{Universit\'e Grenoble Alpes} \\
+%Direcci\'on:& \href{https://batiment.imag.fr/en}{Bâtiment IMAG}, 700 Av. Centrale, 38041, France \\
+%P\'agina web: & \href{http://marcelo-forets.fr}{\url{http://marcelo-forets.fr}}\\
+%Tel\'efono m\'obil: & (+33)(0)6-47-91-43-65 \\
+%E-mail personal: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} \\
+%E-mail trabajo: & \href{mailto:marcelo.forets-irurtia@univ-grenoble-alpes.fr}{marcelo.forets-irurtia@univ-grenoble-alpes.fr} \\
+%Nacionalidad: & Uruguaya \\
+%Edad y situaci\'on  familiar: & 29, Casado
+Domicilio:& \href{https://www.google.com.uy/maps/@-34.8822456,-55.0512462,17z?hl=es-419}{Juana de Am\'{e}rica esq. Para\'{i}so}, Pta. Ballena, Uruguay\\
+Web: & \href{http://marcelo-forets.fr}{\url{http://marcelo-forets.fr}}\\
+Celular: & (+598)(0)92-079-370 \\
+Email: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} %\\
 \end{tabular}
 
 %\section{}
@@ -211,13 +216,21 @@ Edad y situaci\'on  familiar: & 29, Casado
 
 \rule{\textwidth}{0.5pt}
 
-\section{Cargo actual}
-\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Grenoble Alpes}}, Grenoble, France
-\hfill\textbf{Enero 2016-actual}
-\begin{itemize}
-\item[-] Investigador de Post-Doctorado en el grupo TEMPO.
-\item[-] Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
-\end{itemize}
+\section{Resumen}
+
+\vspace{-0.4cm}
+
+% perfil cientifico
+Marcelo Forets es un investigador que trabaja en métodos computacionales, físicos y matemáticos, aplicados a las Ciencias y la Ingeniería. %Su trabajo se encuentra en la frontera de la matemática aplicada y la verificación formal para los sistemas  híbridos  y de control.
+Se interesa por establecer puentes entre la investigación teórica y sus aplicaciones en las distintas áreas de desarrollo del país. 
+
+%\section{Cargo actual}
+%\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Grenoble Alpes}}, Grenoble, France
+%\hfill\textbf{Enero 2016-actual}
+%\begin{itemize}
+%\item[-] Investigador de Post-Doctorado en el grupo TEMPO.
+%\item[-] Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
+%\end{itemize}
 
 %\section{Temas de inter\'es acad\'emico}
 %\begin{itemize}
@@ -230,18 +243,21 @@ Edad y situaci\'on  familiar: & 29, Casado
 \section{Formaci\'{o}n}
 %
 
+\vspace{-0.4cm}
+
 %\blankline
 
-\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Joseph Fourier}}, Grenoble, France
+\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Joseph Fourier}}, Grenoble, Francia
 \hfill\textbf{2013--2015}
 
 \begin{outerlist}
-\item[-] Doctorat en Math\'ematiques et Informatique à l'\'Ecole Doctorale MSTII
+\item[-] {\textbf{Doctorat en Math\'ematiques et Informatique}}% à l'\'Ecole Doctorale MSTII
 	\begin{innerlist}
-        \item[-] Laboratorio: \href{http://www.liglab.fr/}{Laboratoire d'Informatique de Grenoble}, \'equipe \href{http://capp.imag.fr/wordpress/}{CAPP}.
-        \item[-] Título de la tesis: \emph{Marches Quantiques et M\'ecanique Quantique Relativiste.}
-	\item[-] Directores de tesis: \href{http://membres-lig.imag.fr/arrighi/}{Pablo Arrighi} (directeur) et \href{http://www-fourier.ujf-grenoble.fr/~joye/}{Alain Joye} (co-encadrant).
-	\item[-] Palabras clave: mecánica cuántica discreta, simulación de sistemas cuánticos en interacción, análisis espectral, caminatas cuánticas, mecánica cuántica relativista.
+		\item[-] Escuela Doctoral: MSTII (Matemáticas, Ciencias de la Tecnología y de la Informatión e Informática)
+        \item[-] Laboratorio: \href{http://www.liglab.fr/}{Laboratoire d'Informatique de Grenoble}, equipo \href{http://capp.imag.fr/wordpress/}{CAPP}.
+        \item[-] Título de la tesis: \href{https://tel.archives-ouvertes.fr/tel-01253797}{\emph{Marches Quantiques et M\'ecanique Quantique Relativiste.}} (Caminatas Cuánticas y Mecánica Cuántica Relativista.)
+	\item[-] Directores de tesis: \href{http://pageperso.lif.univ-mrs.fr/~pablo.arrighi/}{Pablo Arrighi} (director) y \href{http://www-fourier.ujf-grenoble.fr/~joye/}{Alain Joye} (co-tutor).
+	\item[-] Palabras clave: computación cuántica, mecánica cuántica discreta, simulación de sistemas cuánticos en interacción, análisis espectral, caminatas cuánticas, mecánica cuántica relativista.
 	\end{innerlist}
 
 
@@ -254,7 +270,7 @@ Edad y situaci\'on  familiar: & 29, Casado
 
 \begin{outerlist}
 
-\item[-] Ingeniero Electricista, opci\'on Electr\'onica, 2012 
+\item[-] {\textbf{Ingeniero Electricista, opci\'on Electr\'onica}}, 2012 
 \item[-] Tesis de grado: \href{http://iie.fing.edu.uy/investigacion/grupos/lai/}{CubeSatET:} Diseño e implementación de una estación espacial terrestre como datalink para un satélite remoto.
 
 \end{outerlist}
@@ -266,14 +282,31 @@ Edad y situaci\'on  familiar: & 29, Casado
 
 \begin{outerlist}
 
-	\item[-] Licenciado en F\'isica, opci\'on F\'isica (\emph{Licence en Physique})
+	\item[-] {\textbf{Licenciado en F\'isica, opci\'on F\'isica}} %(\emph{Licence en Physique})
 	\item[-] Clasificación: 10.04/12 (1er rango por año de obtención de diploma)
 
 \end{outerlist}
 
-\section{Idiomas}
+\section{Conocimiento Técnico}
 
-espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu\'es (nociones)
+\vspace{-0.75cm}
+
+\begin{itemize}
+	\item[-] Software de gestión de proyectos y control de revisión (git). Sistemas de preparación de documentos: LaTeX. Sistemas operativos: Linux, MacOSX, Windows.
+	\item[-] Lenguages de programación científica: Julia, Python/NumPy/SciPy, Cython, MATLAB. Lenguages de programación de sistemas: C, Fortran, Java.
+	\item[-] Manejo fluido (oral y escrito) del Español, Inglés y Francés. 
+\end{itemize}
+
+\section{Distinciones} 
+\begin{itemize}
+	\item[-] Beca de doctorado ``Allocations président pour des étudiants extérieurs d'excellence'' otorgado por la Universidad Joseph Fourier, Grenoble, Francia (2013-2015). 
+	\item[-] Finalizaci\'{o}n de estudios de posgrado para docentes de la UdelaR. CSIC (2011). 
+	\item[-] Beca de Iniciación a la Investigación. PEDECIBA, Uruguay (2008). G. Abal, R. Donangelo.  
+\end{itemize}
+
+%\section{Idiomas}
+%
+%espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu\'es (nociones)
 
 %\blankline
 %
@@ -286,8 +319,17 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 %	\item[-] Clasificación: 10.04/12 (1er rango por año de obtención de diploma)
 %	
 %\end{outerlist}
-
+\clearpage
 \section{Experiencia profesional}
+
+\vspace{-0.4cm}
+
+%\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Grenoble Alpes}}, Grenoble, France
+%\hfill\textbf{Enero 2016-actual}
+%\begin{itemize}
+%\item[-] Investigador de Post-Doctorado en el grupo TEMPO.
+%\item[-] Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
+%\end{itemize}
 
 \href{http://www.ujf-grenoble.fr/}{\textbf{Univ. Grenoble Alpes}}, Grenoble, France
 \hfill\textbf{2016--2017}
@@ -295,7 +337,10 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 \begin{outerlist}
 	\item[]\textit{Investigación \& Proyectos}
 	\begin{innerlist}
-		\item[-] NANO2017. Estudio de la variabilidad de circuitos electrónicos analógicos. Colaboración con ST Microelectronics.
+		\item[-] Investigador de Post-Doctorado en el laboratorio \href{http://www-verimag.imag.fr/?lang=en}{VERIMAG}, grupo TEMPO (Timed and Hybrid Systems group). 
+		
+		Palabras clave: sistemas híbridos, verificación formal, sistemas dinámicos no lineales, métodos composicionales, teoría de control robusto, optimización matemática, computación científica.
+		\item[-] NANO2017. Estudio de la variabilidad de circuitos electrónicos analógicos. Colaboración entre la Univ. Grenoble Alpes y la compañía ST Microelectronics.
 	\end{innerlist}
 \end{outerlist}
 
@@ -317,16 +362,20 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 \hfill\textbf{2008--2012}
 
 \begin{outerlist}
-\item[]\textit{Enseñanza}
-\begin{innerlist}
-\item[-] \href{http://www.fing.edu.uy}{\textbf{Facultad de Ingenier\'ia}}: Docente (ayudante, 20hs/sem) para cursos de 1er y 2o año de las carreras de Ingeniería (física general, mecánica, electromagnetismo), y de la Licenciatura en Física (mecánica estadística, laboratorio).
-\item[-] \href{http://www.fhuce.edu.uy/}{\textbf{Facultad de Humanidades y Ciencias de la Educaci\'{o}n}}: Docente del curso de Probabilidad y Estadística.
-\end{innerlist}
-
 \item[]\textit{Investigación \& Proyectos}
 \begin{innerlist}
-\item[-] Miembro del equipo ``Física Computacional y Mecánica Estadística" del Instituto de Física. Palabras clave: procesamiento cuántico de la información, correlaciones cuánticas, algorithms de búsqueda. 
-\item[-] Miembro del equpo ``Plataforma de simulaci\'{o}n para el sistema de energ\'{i}a el\'{e}ctrico'' \href{http://iie.fing.edu.uy/simsee/}{SimSEE} del Instituto de Ingeiería Eléctrica (IIE), proyecto ANII. Palabras clave: optimización estocástica, programación no lineal.
+\item[-] Miembro del equipo ``Física Computacional y Mecánica Estadística" del Instituto de Física. Referencias: Gonzalo Abal, Raul Donangelo. 
+
+Palabras clave: procesamiento cuántico de la información, correlaciones cuánticas, algoritmos de búsqueda. 
+\item[-] Miembro del equipo ``Plataforma de simulaci\'{o}n para el sistema de energ\'{i}a el\'{e}ctrico'' \href{http://iie.fing.edu.uy/simsee/}{SimSEE} del Instituto de Ingeiería Eléctrica (IIE), proyecto ANII. 
+
+Palabras clave: optimización estocástica, programación no lineal.
+\end{innerlist}
+
+\item[]\textit{Enseñanza}
+\begin{innerlist}
+	\item[-] \href{http://www.fing.edu.uy}{\textbf{Facultad de Ingenier\'ia}}: Docente (ayudante, 20hs/sem) para cursos de primer y segundo año de las carreras de Ingeniería (entre ellos Física General, Mecánica Newtoniana, Electromagnetismo), y de la Licenciatura en Física (entre ellos Mecánica Estadística, Laboratorio).
+	\item[-] \href{http://www.fhuce.edu.uy/}{\textbf{Facultad de Humanidades y Ciencias de la Educaci\'{o}n}}: Docente del curso de Probabilidad y Estadística (2008-2009).
 \end{innerlist}
 
 \end{outerlist}
@@ -408,93 +457,119 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
     \end{enumerate}
 }
 
-\section{Publicaciones en revistas con revisón por pares (selección)}
 
-\begin{outerlist}
-%\item[] 
-%\begin{benumerate}{4}
-%\item Enhancing entropy production via dynamical percolation (joint with R. Donangelo, A. Romanelli). \emph{(unpublished)}
-
-\item[-] Quantum Walking in Curved Spacetime, Pablo Arrighi, Stefano Facchini, M. F. \emph{Quantum Information Processing} \href{https://link.springer.com/article/10.1007/s11128-016-1335-7}{(2016) 15: 3467}. \href{https://arxiv.org/abs/1505.07023}{arXiv: 1505.07023}. Palabras clave: paired QWs, lattice quantum field theory, quantum simulation. 
-
-\item[-] \href{http://iopscience.iop.org/1367-2630/16/9/093007/}{Discrete Lorentz covariance for Quantum Walks and Quantum Cellular Automata}. P. Arrighi, S. Facchini. \emph{New Journal of Physics}, 16 (2014) 093007. \href{https://arxiv.org/abs/1404.4499}{arXiv: 1404.4499}.
-
-\item[-] \href{http://arxiv.org/abs/1307.3524}{The Dirac equation as a quantum walk: higher dimensions, observational convergence}. P. Arrighi, V. Nesme and M.F. \emph{Journal of Physics A: Mathematical and Theoretical}, 47 (2014) 465302. \href{https://arxiv.org/abs/1307.3524}{arXiv: 1307.3524}.
-
-%\item \href{http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=8544748&fileId=S0960129511000600}{Spatial quantum search in a triangular network} (joint with G. Abal, R. Donangelo and R. Portugal). Publi\'{e} en \emph{Mathematical Structures in Computer Science}, 22 , pp 521-531, Cambridge University Press. Voir aussi arXiv pre-print: \href{http://arxiv.org/abs/1009.1422}{arXiv:1009.1422}
-%\end{benumerate}
-\end{outerlist}
 
 \section{Publicaciones en conferencias con revisión por pares  (selección)}
 
+\vspace{-0.75cm}
+
 \begin{outerlist}
 %	\begin{benumerate}{3}
-	
-		\item[-] Modeling the Wind Turbine Benchmark with PWA Hybrid Automata. Applied Verification for Continuous and Hybrid Systems (ARCH 2017). \href{https://hal.archives-ouvertes.fr/hal-01508674}{HAL: 01508674}. Palabras clave: reachability analysis, compositional methods, nonlinear control systems, SpaceEx. 
+		\item[-] \emph{Reach Set Approximation through Decomposition with Low-dimensional Sets and High-dimensional Matrices.} Sergiy Bogomolov, M. F., Goran Frehse, Andreas Podelski, Christian Schilling, Frédéric Viry.
+		In \href{https://www.hscc2018.deib.polimi.it}{21st ACM International Conference on Hybrid Systems: Computation and Control, 2018}, Porto, Portugal (2018). Palabras clave: reachability analysis, safety verification, linear time-invariant systems, set recurrence relation.
 
-		\item[-] Constructing Verification Models of Nonlinear Simulink Systems via Syntactic Hybridization. Nikolaos Kekatos, M. F., Goran Frehse.  \href{https://hal.archives-ouvertes.fr/hal-01487658}{HAL: 01487658}. 56th IEEE Conference on Decision and Control, to be held in Melbourne, Australia (2017).
+		\item[-] \emph{Modeling the Wind Turbine Benchmark with PWA Hybrid Automata.} Applied Verification for Continuous and Hybrid Systems (ARCH 2017). Nikolaos Kekatos, M. F., Goran Frehse.  \href{https://hal.archives-ouvertes.fr/hal-01508674}{HAL: 01508674}. Palabras clave: reachability analysis, compositional methods, nonlinear control systems, SpaceEx. 
+
+		\item[-] \emph{Constructing Verification Models of Nonlinear Simulink Systems via Syntactic Hybridization.} Nikolaos Kekatos, M. F., Goran Frehse.  \href{https://hal.archives-ouvertes.fr/hal-01487658}{HAL: 01487658}. 56th IEEE Conference on Decision and Control, Melbourne, Australia (2017).
 		
-		\item[-] Semidefinite Characterization of Invariant Measures for Polynomial Systems. Victor Magron, M. F., Didier Henrion. 18th French-German-Italian conference on Optimization, en Paderborn, Germany (2017). Palabras clave: invariant measures, dynamical systems, polynomial optimization, semidefinite programming, moment-sum-of-square relaxations, Christoffel function. 
+		\item[-] \emph{Semidefinite Characterization of Invariant Measures for Polynomial Systems.} Victor Magron, M. F., Didier Henrion. 18th French-German-Italian conference on Optimization, en Paderborn, Germany (2017). Palabras clave: invariant measures, dynamical systems, polynomial optimization, semidefinite programming, moment-sum-of-square relaxations, Christoffel function. 
 
 %	\end{benumerate}
 \end{outerlist}
 
+\section{Publicaciones en revistas con revisón por pares (selección)}
 
-\section{Trabajos submitidos en proceso de revisión}
+\vspace{-0.75cm}
 
 \begin{outerlist}
-	\item[] 
-	\begin{benumerate}{3}
-
-		\item Reach Set Approximation through Decomposition with Low-dimensional Sets and High-dimensional Matrices, Sergiy Bogomolov, M. F., Goran Frehse, Andreas Podelski, Christian Schilling, Frédéric Viry. 2017. Palabras clave: reachability analysis, safety verification, linear time-invariant systems, set recurrence relation.
-		
-		\item Occupation measure methods for modelling and analysis of biological hybrid automata. 2017. Thao Dang, Eric Fanchon, M. F., Victor Magron, Alexandre Rocca. \href{https://arxiv.org/abs/1710.03158}{arXiv: 1710.03158}. Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures. 
-		
-		\item Explicit Error Bounds for Carleman Linearization. 2017. M. F., Amaury Pouly. \href{https://arxiv.org/abs/1711.02552}{arXiv: 1711.02552}. Palabras clave: carleman linearization, polynomial ODEs, infinite-dimensional systems, guaranteed integration, nonlinear control theory.  
-
-	\end{benumerate}
+	%\item[] 
+	%\begin{benumerate}{4}
+	%\item Enhancing entropy production via dynamical percolation (joint with R. Donangelo, A. Romanelli). \emph{(unpublished)}
+	
+	\item[-] \emph{Quantum Walking in Curved Spacetime}, Pablo Arrighi, Stefano Facchini, M. F. Quantum Information Processing \href{https://link.springer.com/article/10.1007/s11128-016-1335-7}{(2016) 15: 3467}. \href{https://arxiv.org/abs/1505.07023}{arXiv: 1505.07023}. Palabras clave: paired QWs, lattice quantum field theory, quantum simulation. 
+	
+	\item[-] \href{http://iopscience.iop.org/1367-2630/16/9/093007/}{\emph{Discrete Lorentz covariance for Quantum Walks and Quantum Cellular Automata}}. P. Arrighi, S. Facchini. \emph{New Journal of Physics}, 16 (2014) 093007. \href{https://arxiv.org/abs/1404.4499}{arXiv: 1404.4499}.
+	
+	\item[-] \href{http://arxiv.org/abs/1307.3524}{\emph{The Dirac equation as a quantum walk: higher dimensions, observational convergence}}. P. Arrighi, V. Nesme and M.F. \emph{Journal of Physics A: Mathematical and Theoretical}, 47 (2014) 465302. \href{https://arxiv.org/abs/1307.3524}{arXiv: 1307.3524}.
+	
+	%\item \href{http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=8544748&fileId=S0960129511000600}{Spatial quantum search in a triangular network} (joint with G. Abal, R. Donangelo and R. Portugal). Publi\'{e} en \emph{Mathematical Structures in Computer Science}, 22 , pp 521-531, Cambridge University Press. Voir aussi arXiv pre-print: \href{http://arxiv.org/abs/1009.1422}{arXiv:1009.1422}
+	%\end{benumerate}
 \end{outerlist}
 
-\section{Presentaciones orales}
+%\section{Trabajos submitidos en proceso de revisión}
+%
+%\begin{outerlist}
+%	\item[] 
+%	\begin{benumerate}{3}
+%
+%		\item Reach Set Approximation through Decomposition with Low-dimensional Sets and High-dimensional Matrices, Sergiy Bogomolov, M. F., Goran Frehse, Andreas Podelski, Christian Schilling, Frédéric Viry. 2017. Palabras clave: reachability analysis, safety verification, linear time-invariant systems, set recurrence relation.
+%		
+%		\item Occupation measure methods for modelling and analysis of biological hybrid automata. 2017. Thao Dang, Eric Fanchon, M. F., Victor Magron, Alexandre Rocca. \href{https://arxiv.org/abs/1710.03158}{arXiv: 1710.03158}. Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures. 
+%		
+%		\item Explicit Error Bounds for Carleman Linearization. 2017. M. F., Amaury Pouly. \href{https://arxiv.org/abs/1711.02552}{arXiv: 1711.02552}. Palabras clave: carleman linearization, polynomial ODEs, infinite-dimensional systems, guaranteed integration, nonlinear control theory.  
+%
+%	\end{benumerate}
+%\end{outerlist}
+
+\section{Capítulos de libros}
+
+\vspace{-0.75cm}
+
+\begin{itemize}
+	
+	\item[-]  Traducción y revisión en: \href{https://hal.archives-ouvertes.fr/hal-01646401}{\emph{Mathematical Computation with SageMath}} Alexandre Casamayou, Nathann Cohen, Guillaume Connan, Thierry Dumont, Laurent Fousse, et al.. En proceso de publicación.
+\end{itemize}
+
+\section{Presentaciones  orales y pósters (selección)}
+
+\vspace{-0.75cm}
 
 \begin{itemize}
 
-	\item[-]  Quantum walking in curved spacetime: (3+1) dimensions, and beyond , 2016. 7th colloquium of the CNRS GDR Quantum Engineering, Foundations and Applications (IQFA). 
+	\item[-]   7th Colloquium of the CNRS GDR Quantum Engineering, Foundations and Applications (IQFA), Paris, Francia (2016). \emph{Quantum walking in curved spacetime: (3+1) dimensions, and beyond}. 
 
-	\item[-]  Journ\'{e}es Informatique Quantique 2013, Nancy, France (2013). \emph{The Dirac Quantum Walk}.
+	\item[-] Journ\'{e}es Informatique Quantique 2013, Nancy, Francia (2013). \emph{The Dirac Quantum Walk}. 
 
-	\item[-] Mathematics, Statistics and Applied Mathematics Seminar, NUI Galway, Ireland (2014). Orador invitado. \emph{The Cauchy problem for the continuous limit of Quantum Walks}. 
+	\item[-] Orador invitado en: Mathematics, Statistics and Applied Mathematics Seminar, NUI Galway, Irlanda (2014). \emph{The Cauchy problem for the continuous limit of Quantum Walks}. 
+
+	\item[-]  Colloque du \href{http://gdriqfa.unice.fr/?lang=en}{GDR IQFA}, Lyon, Francia (2014). \emph{Discrete Lorentz covariance} % poster
+
+	\item[-] Quantum walks and quantum simulations, Scuola Normale Superiore, Pisa, Italia (2013). \emph{The Dirac equation as a Quantum Walk}. % poster
 
 \end{itemize}
 
-\section{Presentaciones en formato póster  y seminarios (selección)}
-
-\begin{outerlist}
-	%	\begin{benumerate}{3}
-	
-	\item[-] Colloque du \href{http://gdriqfa.unice.fr/?lang=en}{GDR IQFA}, Lyon, France (2014). Poster: \emph{Discrete Lorentz covariance}.
-	
-	\item[-] Quantum walks and quantum simulations, Scuola Normale Superiore, Pisa, Italy (2013). Poster: \emph{The Dirac equation as a Quantum Walk}.
-	
-	%	\end{benumerate}
-\end{outerlist}
+%\section{Presentaciones en formato póster  y seminarios (selección)}
+%
+%\begin{outerlist}
+%	%	\begin{benumerate}{3}
+%	
+%	\item[-] Colloque du \href{http://gdriqfa.unice.fr/?lang=en}{GDR IQFA}, Lyon, France (2014). Poster: \emph{Discrete Lorentz covariance}.
+%	
+%	\item[-] Quantum walks and quantum simulations, Scuola Normale Superiore, Pisa, Italy (2013). Poster: \emph{The Dirac equation as a Quantum Walk}.
+%	
+%	%	\end{benumerate}
+%\end{outerlist}
 
 
 \section{Participación en Conferencias y Workshops} 
 
+\vspace{-0.75cm}
+
 \begin{itemize}
+
+\item[-] \href{http://faberresidency.com/residences/mathematics-february-march-2017/}{Sage Days 84 : Polytopes}, Olot, Cataluña, España (2017). Workshop en Faber Residency por el proyecto Europeo OpenDreamKit de software libre y matemáticas.
 
 \item[-] \href{http://www.fis.puc.cl/~smp2015/frontpage.html}{Summer School on current topics in Mathematical Physics}, Valparaiso, Chile, (2015). Lecturers: Barry Simon, Gunther Uhlmann, Simone Warzel, Jakob Yngvason.
 
-\item[-] \href{http://www.math.kit.edu/iana3/page/isem/en}{18th ISEM 2014/2015}, Blaubeuren, Germany (2015). Form Methods for Evolution Equations, and Applications.
+\item[-] \href{http://www.math.kit.edu/iana3/page/isem/en}{18th ISEM 2014/2015}, Blaubeuren, Alemania (2015). Form Methods for Evolution Equations, and Applications.
 
-\item[-] \href{http://www.lebesgue.fr/content/sem2015-math-phy}{Meeting in Mathematical Physics}, Nantes, France, (2015). Institut Lebesgue, en partenariat avec \href{http://www.math.sciences.univ-nantes.fr/NOSEVOL/node/2}{ANR Nosevol}, et \href{http://www.math.sciences.univ-nantes.fr/dynqua/Accueil}{GDR Dynamique quantique}.
+\item[-] \href{http://www.lebesgue.fr/content/sem2015-math-phy}{Meeting in Mathematical Physics}, Nantes, Francia (2015). Institut Lebesgue, en partenariat avec \href{http://www.math.sciences.univ-nantes.fr/NOSEVOL/node/2}{ANR Nosevol}, et \href{http://www.math.sciences.univ-nantes.fr/dynqua/Accueil}{GDR Dynamique quantique}.
 
-\item[-] \href{http://pillet.univ-tln.fr/aoqs/www/}{Advances in Open Quantum Systems}, Autrans, France (2013). Organizado por el proyecto \href{http://bruneau.u-cergy.fr/ANR/ANR.html}{ANR HamMark}.
+\item[-] \href{http://pillet.univ-tln.fr/aoqs/www/}{Advances in Open Quantum Systems}, Autrans, Francia (2013). Organizado por el proyecto \href{http://bruneau.u-cergy.fr/ANR/ANR.html}{ANR HamMark}.
 
-\item[-] III Workshop-Escola de computação e Informação Quântica. Brazilian National Laboratory of Computer Science (LNCC), Petrópolis, RJ, Brasil (2010).
+\item[-] III Workshop-Escola de computação e Informação Quântica. Laboratorio Nacional Brasilero de Computación Científica (LNCC), Petrópolis, RJ, Brasil (2010). % Brazilian National Laboratory of Computer Science
 
-\item[-] NASA \& NIA 2010 RASC-AL Design Competition Forum (2010). 
+\item[-] NASA \& NIA 2010 RASC-AL Design Competition Forum, Florida, USA (2010). 
 
 \item[-] II Quantum Information School \& Workshop, Paraty, RJ, Brasil (2009).
 
@@ -511,6 +586,8 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 
 \section{Organización de Conferencias y Workshops}
 
+\vspace{-0.75cm}
+
 \begin{itemize}
 
 	\item[-] \href{http://gm-rqw.imag.fr/}{Meeting in Relativistic Quantum Walks}, Grenoble, France, (2014). Organización científica y material de la conferencia.
@@ -518,14 +595,12 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 	\item[-] II Reuni\'{o}n conjunta de la Sociedad Argentina de F\'{i}sica y de la Sociedad Uruguaya de F\'{i}sica, Montevideo, Uruguay (2011). Miembro del comité organizador.
 \end{itemize}
 
-\section{Distinciones} 
-\begin{itemize}
-	\item[-] Beca de doctorado de la Univ. Joseph Fourier, Grenoble, Francia (2013-2015).
-\item[-] Finalizaci\'{o}n de estudios de posgrado para docentes de la UdelaR. CSIC (2011). 
-\item[-] Beca de Iniciación a la Investigación. PEDECIBA, Uruguay (2008). G. Abal, R. Donangelo.  
-\end{itemize}
 
-\section{Actividades Académicas}
+
+\section{Actividades}
+
+\vspace{-0.75cm}
+
 \begin{itemize}
 \item[-] Hybrid Systems: Computation and Control (HSCC) Repeatability Evaluation Commitee Member (2016, 2017).
 \item[-] 20th International Federation of Automatic Control
@@ -533,25 +608,21 @@ espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu
 \item[-] Revisor en otras revistas científicas y conferencias: Computational Methods in Systems Biology (CMSB), Hybrid Systems Biology (HSB), Physica A: Statistical Mechanics and its Applications, Nature Scientific Reports, IEEE/ACM Transactions on Computational Biology and Bioinformatics.
 \item[-] Miembro del jurado de tesis de grado en la Univ. ORT, Uruguay (2012) y en la Univ. de la Rep\'{u}blica, Uruguay (2010). 
 \item[-] Delegado estudiante del comit\'e de PEDECIBA F\'isica (2011-2012).
+\item[-] Miembro del comit\'e organizador de la Olimpiada Nacional de Fisica, Uruguay (2009-actual), y delegado de Uruguay en las OIbF en Granada, España (2013).
+\item[-] Desarrollador del software de cálculo matemático open-source SageMath. 
 \end{itemize}
 
 %\section{Idiomas}
 %
 %espa\~nol (lengua materna), ingl\'es (corriente), franc\'es (corriente), portugu\'es (nociones)
 
-\section{Otras actividades}
+%\section{Otras actividades}
+%
+%\begin{itemize}
+%
+%\end{itemize}
 
-\begin{itemize}
-	\item[-] Miembro del comit\'e organizador de la Olimpiada Nacional de Fisica, Uruguay (2009-actual), y delegado de Uruguay en las OIbF en Granada, España (2013).
-	\item[-] Desarrollador open-source del software de cálculo matemático SageMath. 
-\end{itemize}
 
-\section{Conocimiento Técnico}
-
-\begin{itemize}
-	\item[-] Herramientas de productividad. Sistemas de preparación de documentos: LaTeX. Sistemas operativos: Linux, MacOSX. Sistemas de control de revisión: git
-	\item[-] Lenguages de programación científica: Julia (experto), Python/NumPy/SciPy (experto), MATLAB (experto), Cython (intermedio). Lenguages de programación de sistemas: C (intermedio), Fortran (nociones), Java (nociones).
-\end{itemize}
  
 
 %\section{Loisirs}
