--- a/assets/cv/cv_es.tex
+++ b/assets/cv/cv_es.tex
@@ -222,7 +222,7 @@ Email: & \href{mailto:mforets@gmail.com}{mforets@gmail.com} %\\
 
 % perfil cientifico
 Marcelo Forets es un investigador que trabaja en métodos computacionales, físicos y matemáticos, aplicados a las Ciencias y la Ingeniería. %Su trabajo se encuentra en la frontera de la matemática aplicada y la verificación formal para los sistemas  híbridos  y de control.
-Se interesa por establecer puentes entre la investigación teórica y sus aplicaciones en las distintas áreas de desarrollo del país. 
+Se interesa por establecer puentes entre la investigación teórica y sus aplicaciones en las áreas de desarrollo del país. 
 
 %\section{Cargo actual}
 %\href{http://www.ujf-grenoble.fr/}{\textbf{Universit\'e Grenoble Alpes}}, Grenoble, France
@@ -465,6 +465,9 @@ Palabras clave: optimización estocástica, programación no lineal.
 
 \begin{outerlist}
 %	\begin{benumerate}{3}
+		\item[-] \emph{Occupation measure methods for modelling and analysis of biological hybrid systems.} Alexandre Rocca, M. F., Victor Magron, Eric Fanchon, Thao Dang.
+		In \href{https://www.cs.ox.ac.uk/conferences/ADHS18/}{6th IFAC Conference on Analysis and Design of Hybrid Systems (ADHS 18)}, Oxford, United Kingdom (2018). Palabras clave: biological modelling, hybrid dynamical system, optimal control problem, semidefinite optimization, occupation measures.
+
 		\item[-] \emph{Reach Set Approximation through Decomposition with Low-dimensional Sets and High-dimensional Matrices.} Sergiy Bogomolov, M. F., Goran Frehse, Andreas Podelski, Christian Schilling, Frédéric Viry.
 		In \href{https://www.hscc2018.deib.polimi.it}{21st ACM International Conference on Hybrid Systems: Computation and Control, 2018}, Porto, Portugal (2018). Palabras clave: reachability analysis, safety verification, linear time-invariant systems, set recurrence relation.
 
@@ -609,7 +612,7 @@ Palabras clave: optimización estocástica, programación no lineal.
 \item[-] Miembro del jurado de tesis de grado en la Univ. ORT, Uruguay (2012) y en la Univ. de la Rep\'{u}blica, Uruguay (2010). 
 \item[-] Delegado estudiante del comit\'e de PEDECIBA F\'isica (2011-2012).
 \item[-] Miembro del comit\'e organizador de la Olimpiada Nacional de Fisica, Uruguay (2009-actual), y delegado de Uruguay en las OIbF en Granada, España (2013).
-\item[-] Desarrollador del software de cálculo matemático open-source SageMath. 
+\item[-] Colaborador del software de cálculo matemático open-source SageMath. 
 \end{itemize}
 
 %\section{Idiomas}
